--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ body{
 .header{
     width: 100%;
     height: 700px;
+    overflow: hidden;
     background-image: url("images/header-bg.png");
-    background-repeat: no-repeat;
-
+    background-repeat:no-repeat;
+    background-size:cover;
 }
 .header p{
     font-weight: 700;
@@ -61,6 +62,7 @@ body{
     overflow: hidden;
     background-image: url("images/biography-bg.png");
     background-repeat: no-repeat;
+    background-size:100% 100%;
 }
 .biography h1{
     font-size: 40px;
@@ -92,6 +94,8 @@ body{
     text-align: center;
     background-image: url("images/latest-work-bg.png");
     background-repeat: no-repeat;
+    background-size:cover;
+    background-position: 0 0;
 }
 .latest-work h1{
     font-size: 43px;
@@ -121,6 +125,8 @@ body{
     text-align: center;
     background-image: url("images/footer-bg.png");
     background-repeat: no-repeat;
+    background-size:cover;
+    background-position: 0 0;
 }
 .information h1{
     margin-bottom: 70px;
